# sticky-notes

./: index.html  package-lock.json  package.json
.github/workflows/: build-windows.yml
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  scheduler.rs
src/components/: AddNoteButton.tsx  NoteEditor.tsx  ReminderPicker.tsx  StickyNote.tsx  Toolbar.tsx
src/hooks/: useDrag.ts  useNotes.ts
src/styles/: global.css  sticky-note.css
